aliem/styles/collections/avada/person.styl
.fusion-person
    .person-img
        max-height: 150px
    .person-desc
        .person-author
            .person-author-wrapper
                .person-name
                    font-weight: 600
                .person-title
                    font-style: italic
            .fusion-social-network-icon:hover
                color: $primary !important
        .person-content
            margin-top: 10px
            font-size: 0.8em

